# RoboSub

Sea_Goat_2016/: README.md
Sea_Goat_2016/Embbeded_Code/robfish_pressuresensors_encoderQEI/: Makefile  main.cpp
Sea_Goat_2016/Embbeded_Code/robfish_pressuresensors_encoderQEI/.build/: main.d
Sea_Goat_2016/autonomy/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
Sea_Goat_2016/autonomy/build-scripts/: build-all-missions.sh  build-all-missions.sh~
Sea_Goat_2016/autonomy/harness_tests/segmentation/: CMakeLists.txt  CMakeLists.txt~  sailencySeg.cpp  test_competition.cpp  test_competition.cpp~  test_lighting.cpp  test_lighting.cpp~  test_main.cpp~
Sea_Goat_2016/autonomy/harness_tests/segmentation/include/: CMakeLists.txt  CMakeLists.txt~  segmentation.cpp  segmentation.cpp~  segmentation.h  segmentation.h~
Sea_Goat_2016/autonomy/harness_tests/segmentation/thresholds/: MARKER.txt
Sea_Goat_2016/autonomy/mission/: CMakeLists.txt  CMakeLists.txt~
Sea_Goat_2016/autonomy/seagoat_vision/: CMakeLists.txt  CMakeLists.txt~  test.cpp
Sea_Goat_2016/autonomy/seagoat_vision/include/: CMakeLists.txt  CMakeLists.txt~  comms.cpp  seagoat_vision.cpp  seagoat_vision.cpp~  seagoat_vision.h  segmentation.cpp  segmentation.cpp~  segmentation.h  segmentation.h~
Sea_Goat_2016/autonomy/seagoat_vision/thresholds/: MARKER.txt
Sea_Goat_2016/rov_sim/: T100_motor_data.xlsx  auv_6dof_sim.slx  auv_6dof_sim_sfun.mexa64  auv_final_test.slx  drawAircraft.m  drawSpacecraftBody.m  fit_data.m  forces_and_moments.m  motor_fiting.m  params.m  thruster_dynamics_test.slx
(+195 files in other folders)
