#cmake_minimum_required(VERSION 2.8)
#project( seagoat_test )

add_subdirectory (include) 

#add_executable( seagoat_vision_test test.cpp )
#target_link_libraries( seagoat_vision_test ${OpenCV_LIBS} )
#target_link_libraries ( seagoat_vision_test seagoat_vision)
#target_link_libraries ( seagoat_vision_test segmentation)
